# Stock-Advisors

./: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/agents/base/: AgentEventBus.ts  AgentRegistry.ts  BaseAgent.ts  types.ts
src/agents/implementations/: BainCompetitive.ts  BlackRockPortfolio.ts  BridgewaterRisk.ts  CitadelTechnical.ts  GoldmanScreener.ts  HarvardDividend.ts  JPMorganEarnings.ts  McKinseyMacro.ts  MorganStanleyDCF.ts  NewsResearch.ts  PerformanceAnalyst.ts  RentechPatterns.ts  SentinelSentiment.ts  ShortTermTrader.ts  SusquehannaOptions.ts
src/agents/orchestrator/: ConflictResolver.ts  MasterOrchestrator.ts  WorkflowEngine.ts
src/agents/prompts/: personalities.ts
src/components/agents/: AgentAvatar.tsx  AgentChat.tsx  PipelineView.tsx
src/components/charts/: MiniChart.tsx  PortfolioChart.tsx  StockChart.tsx
src/components/common/: ConfidenceMeter.tsx  PriceDisplay.tsx  (+2 more)
src/hooks/: useAgent.ts  useKeyboardShortcuts.ts  useTokenTracking.ts
src/lib/: constants.ts  formatters.ts
src/pages/: AgentPage.tsx  AnalysisPage.tsx  DashboardPage.tsx  HistoryPage.tsx  PaperTradingPage.tsx  PerformancePage.tsx  PortfolioPage.tsx  SettingsPage.tsx  WatchlistPage.tsx
src/stores/: useAgentStore.ts  usePaperTradingStore.ts  usePortfolioStore.ts  useSettingsStore.ts  useStockStore.ts  useTradeHistoryStore.ts
src/styles/: globals.css
(+40 files in other folders)
